2001-06-28  Tom Tromey  <tromey@redhat.com>

	* lib/am/libs.am (RANLIB): Don't define.

2001-06-28  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (am_install_var): Assign 1 to $first on
	first interation.

2001-06-23  Tom Tromey  <tromey@redhat.com>

	Fix for yacc5.test:
	* lib/ylwrap: Changed usage.
	* lib/am/yacc.am: Rewrote to use new substitutions.
	* lib/am/lex.am: Likewise.
	* automake.in (handle_languages): Skip files whose language
	doesn't have a compiler.  Handle `define_flag' attribute.
	Changed '$' to "\$" to aid Emacs fontification.
	(struct): Added `rule_file'.  Removed `derived_autodep'.  Added
	`_target_hook' and `define_flag'.
	(yacc, yaccxx, lex, lexxx): Set `rule_file', `flags', `compile',
	and `compiler' attributes.  Removed `linker', `derived_autodep',
	and `ansi' attributes.  Added `define_flag'.
	(yacc, yaccxx): Added `_target_hook'.
	(saw_extension): Count number of times extension seen.
	(count_files_for_language): New sub.
	(saw_sources_p): Use it.
	(handle_single_transform_list): Allow language rewrite function
	to return a new source extension.  Call target_hook.
	(yacc_sources, lex_sources): Removed.
	(initialize_per_input): Don't initialize yacc_sources or
	lex_sources.
	(lang_yacc_rewrite): Rewrote.
	(lang_yaccxx_rewrite): Likewise.
	(lang_lex_rewrite): Likewise.
	(lang_lexxx_rewrite): Likewise.
	(output_yacc_build_rule): Removed.
	(output_lex_build_rule): Removed.
	(lang_yacc_finish): Removed build rule generation.
	(lang_lex_finish): Likewise.
	(DASH_D_PATTERN): New global.
	(lang_yacc_target_hook): New function.
	(_target_hook): New function.
	(register_language): Default `define_flag'.
	* tests/yacc5.test: Updated test.
	* tests/yacc4.test: Exit with status 77 if bison doesn't work.
	* tests/yacc3.test: Remove bogus `make' invocation.  Added test
	for all YFLAGS variables.

2001-06-20  Tom Tromey  <tromey@redhat.com>

	* tests/yacc5.test: Check for per-executable YFLAGS.

2001-06-19  Tom Tromey  <tromey@redhat.com>
