@@ -1,3 +1,10 @@
+2001-06-29  Raja R Harinath  <harinath@cs.umn.edu>
+
+	* automake.in (saw_sources_p): Work even if there are more
+	than one header files, and more than of one type of header.
+	* tests/Makefile.am (TESTS): Added new file.
+	* tests/depend4.test: New file.
+
 2001-06-28  Tom Tromey  <tromey@redhat.com>
 
 	* lib/am/libs.am (RANLIB): Don't define.
